kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: cache-app
  template:
    metadata:
      labels:
        app: cache-app

    spec:
      containers:
        - name: cache-app
          image: cache-app
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
              protocol: TCP
