kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-app-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: cache-app
